[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[mypy]
check_untyped_defs = True
disallow_untyped_calls = True
follow_imports = silent
strict_optional = True
ignore_missing_imports = True
show_error_codes = True

[flake8]
max-line-length = 100
max-complexity = 10
ignore =
    # Missing trailing comma (handled by sjfmt)
    C812
    # No whitespace after paren open "("
    E201
    # No whitespace before paren ")"
    E202
    # Whitespace before ":"
    E203
    # Multiple spaces before operator
    E221
    # Multiple spaces after operand
    E222
    # Multiple spaces after ':'
    E241
    # Spaces around keyword/parameter equals
    E251
    # Multiple spaces before keyword
    E272
    # Line too long (B950 is used instead)
    E501
    # Line break before binary op
    W503
    # Line break after binary op
    W504
    # Missing docstring in public module
    D100
    # Missing docstring in public class
    D101
    # Missing docstring in public method
    D102
    # Missing docstring in public function
    D103
    # Missing docstring on __init__
    D107
    # No blank lines allowed after function docstring
    D202
    # First line should be in imperative mood
    D401
select = A,AAA,D,C,E,F,W,H,B,D212,D404,D405,D406,B901,B950
exclude =
    .git
    __pycache__
    .eggs/
    dist/
    .mypy_cache

# Hopefully this can be resolved, so D404, D405 start working
# https://github.com/PyCQA/pydocstyle/pull/188


[tool:pytest]
addopts = --doctest-modules


[tool:isort]
known_first_party = markdown_katex
known_third_party = pathlib2
force_single_line = True
length_sort = True
line_length = 100


[pycalver]
current_version = v202006.1021
version_pattern = "{pycalver}"
commit = True
tag = True
push = True

[pycalver:file_patterns]
setup.cfg =
    current_version = {version}
setup.py =
    version="{pep440_version}"
src/markdown_katex/__init__.py =
    __version__ = "{version}"
README.md =
    [PyCalVer {version}]
    https://img.shields.io/static/v1.svg?label=PyCalVer&message={version}&color=blue


[tool:pylint]
score = yes
jobs = 1        # >1 may hide results
output-format = colorized
# Maximum number of locals for function / method body
max-locals = 25
# Maximum number of arguments for function / method
max-args = 10
extension-pkg-whitelist = numpy,pandas,lxml,PIL,sklearn,pyblake2
# http://pylint.pycqa.org/en/latest/technical_reference/features.html
disable =
    logging-fstring-interpolation,
    no-else-return,
    no-else-raise,
    bad-whitespace,
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,

# List of note tags to take in consideration, separated by a comma.
notes=FIXME,XXX,TODO,SLOW,BUG
